[package]
name = "sceawian"
version = "0.1.0"
edition = "2021"
authors = ["karei <mail@karei.dev>"]

[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = "2.3.0"
toml = "0.8.13"
tracing = "0.1"
tracing-subscriber = "0.3"
